--- a/index.html
+++ b/index.html
@@ -1,45 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-.circle{
+<title>Reaction Timer</title>
+<style type="text/css">
+#shape
+{
 width:200px;
 height:200px;
-border-radius:50%;
-float:left;
-margin:30px;
-}
-#red{
 background-color:red;
+display:none;
+position:relative;
 }
-#blue{
-background-color:blue;
+body{
+font-family:sans-serif;
 }
-#green{
-background-color:green;
+.bold{
+font-weight:bold;
 }
 </style>
+
+
 </head>
 <body>
-<div class="circle"id="red">
-</div>
-<div class="circle"id="blue">
-</div>
-<div class="circle"id="green">
-</div>
+<h1>Test Your Reactions!</h1>
+<p>Click on the boxes and circles as quickly as you can<p>
+<p class="bold">Your time:<span id="time"></span></p>
+<p class="bold">Quickest time:<span id="quick"></span></p>
+<div id="shape"></div>
 <script type="text/javascript">
-document.getElementById("red").onclick=function()
+var start=new Date().getTime();
+ function getRandomColor() {
+        var letters = '0123456789ABCDEF';
+        var color = '#';
+        for (var i = 0; i < 6; i++ ) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+
+function makeAppear(){
+
+var top= Math.random() * 400;
+var left= Math.random() * 400;
+var width= (Math.random() * 200) + 100;
+if(Math.random() > 0.5)
 {
-document.getElementById("red").style.display="none";
+document.getElementById("shape").style.borderRadius="50%";
 }
-document.getElementById("blue").onclick=function()
-{
-document.getElementById("blue").style.display="none";
+else{
+document.getElementById("shape").style.borderRadius="0";
 }
-document.getElementById("green").onclick=function()
+document.getElementById("shape").style.backgroundColor = getRandomColor();
+document.getElementById("shape").style.top= top +"px";
+document.getElementById("shape").style.left= left + "px";
+document.getElementById("shape").style.width= width + "px";
+document.getElementById("shape").style.height= width + "px";
+
+
+
+document.getElementById("shape").style.display="block";
+start=new Date().getTime();
+}
+function appearAfterDelay()
 {
-document.getElementById("green").style.display="none";
+setTimeout(makeAppear, Math.random() * 2000);
+}
+appearAfterDelay();
+var fastest=1000;
+document.getElementById("shape").onclick=function()
+{
+document.getElementById("shape").style.display="none";
+var end =new Date().getTime();
+var time=(end-start)/1000;
+document.getElementById("time").innerHTML=time+"s";
+if(time<fastest)
+{
+fastest=time;
+document.getElementById("quick").innerHTML =fastest+"s";
+}
+else{
+document.getElementById("quick").innerHTML =fastest+"s";
+}
+
+appearAfterDelay();
 }
 </script>
+
+
+
+
+
+
 </body>
 </html>
